<resources>
    <string name="app_name">DreamFlipClock</string>
    <string name="settings_title">Personalization</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_overlay">Overlay</string>
    <string name="close">Close</string>
    <string name="setting_time_format">Time Format</string>
    <string name="setting_24h">24-hour</string>
    <string name="setting_12h">12-hour</string>
    <string name="setting_clock_size">Clock Size</string>
    <string name="setting_brightness">Screen Brightness</string>
    <string name="setting_oled_protection">OLED Burn-in Protection</string>
    <string name="setting_oled_description">Slowly shifts the clock position to prevent burn-in on OLED screens.</string>
    <string name="setting_overlay">Full-Screen Overlay</string>
    <string name="setting_overlay_description">Force brightness below the system minimum and dim status-bar icons.</string>
    <string name="setting_schedule">Schedule</string>
    <string name="setting_schedule_description">Automatically enable the overlay between two times. Useful for night mode.</string>
    <string name="setting_schedule_from">From</string>
    <string name="setting_schedule_to">To</string>
    <string name="setting_schedule_times">Time Range</string>
    <string name="setting_schedule_times_description">Choose when the overlay turns on and off.</string>
    <string name="setting_orientation">Orientation</string>
    <string name="setting_orientation_description">Force a virtual rotation when auto-rotate is off. Useful since Daydream follows the device orientation lock.</string>
    <string name="setting_orientation_auto">Auto</string>
    <string name="setting_orientation_landscape">Landscape</string>
    <string name="setting_orientation_portrait">Portrait</string>
    <string name="about">About</string>
    <string name="github">GitHub</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_description">A flip clock screensaver for Android.</string>
    <string name="about_author">By gaetanlhf</string>
    <string name="about_section_info">Information</string>
    <string name="about_section_links">Links</string>
    <string name="about_row_version">Version</string>
    <string name="about_row_author">Author</string>
    <string name="about_row_author_value">gaetanlhf</string>
    <string name="about_row_license">License</string>
    <string name="about_row_license_value">GNU GPL v3</string>
    <string name="about_github_description">View source and report issues</string>
    <string name="percent_format">%1$d%%</string>
    <string name="brightness_normal">Normal brightness</string>
    <string name="brightness_dimmer">%1$d%% dimmer than normal</string>
    <string name="enable_accessibility_first">Enable the DreamFlipClock accessibility service first</string>
    <string name="overlay_service_description">Draws a black overlay over everything (including status bar icons) during the screensaver. This service does not read your screen content.</string>
</resources>
